fixing letter overflow in chat
word-wrap: break-word; 
added in chat-message

--- a/meetify/static/chat.css
+++ b/meetify/static/chat.css
@@ -530,6 +530,7 @@ figure{
     border: 1px solid black;
     width: auto;
     min-width: 10px;
+    word-wrap: break-word;
 }
 
 .profile-friend{
